--- a/app/styles/application.css
+++ b/app/styles/application.css
@@ -104,3 +104,18 @@ body {
   opacity: 0.8;
   border: 2px solid #007bff;
 }
+
+.Credit {
+  padding-top: 25px;
+  color: #555;
+  font-size: 14px;
+}
+
+.Credit a, .Credit a:visited {
+  color: #555;
+  font-weight: 400;
+}
+
+.Credit a:hover {
+  color: #333;
+}
