--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .Container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
 }
@@ -31,6 +31,7 @@ body {
   background: #fff;
   border: 1px solid $dark-grey-color;
   border-top: none;
+  border-bottom: none;
 
   &-subtitle {
     text-transform: uppercase;
@@ -107,6 +108,7 @@ body {
   &-image {
     cursor: pointer;
     padding: 4px 8px;
+    position: relative;
 
     &:last-child {
       margin-bottom: 0;
@@ -119,15 +121,8 @@ body {
       transition: 0.5s ease-in-out border;
     }
 
-    &--selected {
-      position: relative;
-
-      img {
-        opacity: 0.8;
-        border: 2px solid $blue-color;
-      }
-
-     .ImagePicker-wrapper:before {
+    &-wrapper {
+      &:before {
         display: block;
         height: 20px;
         width: 20px;
@@ -143,6 +138,82 @@ body {
         font-size: 12px;
         line-height: 20px;
         text-align: center;
+        transition: 0.5s ease-in-out opacity;
+        opacity: 0;
+      }
+    }
+
+    &--selected {
+      img {
+        opacity: 0.8;
+        border: 2px solid $blue-color;
+      }
+
+     .ImagePicker-image-wrapper:before {
+       opacity: 1;
+      }
+    }
+  }
+}
+
+.SizePicker {
+  display: flex;
+  justify-content: space-between;
+
+  &-size {
+    height: 50px;
+    border: 1px solid $light-grey-color;
+    border-radius: 3px;
+    font-size: 10px;
+    line-height: 10px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.5s ease-in-out border;
+    position: relative;
+
+    &--tall {
+      flex: 0 0 35px;
+    }
+
+    &--square {
+      flex: 0 0 50px;
+    }
+
+    &--wide {
+      flex: 0 0 90px;
+    }
+
+    &-wrapper {
+      padding-top: 20px;
+
+      &:before {
+        display: block;
+        height: 20px;
+        width: 20px;
+        background: $blue-color;
+        border-radius: 50%;
+        border: 1px solid #fff;
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        content: "\2713";
+        color: #fff;
+        z-index: 9;
+        font-size: 12px;
+        line-height: 20px;
+        text-align: center;
+        transition: 0.5s ease-in-out opacity;
+        opacity: 0;
+      }
+    }
+
+    &--selected {
+      border-color: $blue-color;
+
+      .SizePicker-size-wrapper {
+        &:before {
+          opacity: 1;
+        }
       }
     }
   }
