--- a/public/app.css
+++ b/public/app.css
@@ -1,149 +1,1 @@
-/* line 1, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-* {
-  box-sizing: border-box;
-  font-family: -apple-system, system, sans-serif; }
-
-/* line 11, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-body {
-  background: #eee;
-  margin: 0; }
-
-/* line 16, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-.Container {
-  height: 100vh;
-  display: flex;
-  justify-content: center; }
-
-/* line 22, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-.Sidebar {
-  flex: 0 0 220px;
-  margin: 0 15px;
-  padding-top: 15px; }
-
-/* line 28, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-.Main {
-  flex: 0 0 530px;
-  padding: 15px;
-  background: #fff;
-  border: 1px solid #ddd;
-  border-top: none; }
-  /* line 35, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-  .Main-subtitle {
-    text-transform: uppercase;
-    padding: 0;
-    margin: 0;
-    margin-top: 10px;
-    margin-bottom: 19px;
-    color: #aaa;
-    font-weight: 400;
-    letter-spacing: 0.5px;
-    font-size: 13px; }
-
-/* line 48, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-.Card {
-  background: #fff;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  padding: 6px 10px;
-  margin-bottom: 10px; }
-  /* line 55, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-  .Card:last-child {
-    margin-bottom: 0; }
-  /* line 59, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-  .Card-header {
-    padding: 4px;
-    margin-bottom: 14px;
-    border-bottom: 1px solid #eee; }
-    /* line 64, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-    .Card-header h4 {
-      margin: 0;
-      padding: 0;
-      text-transform: uppercase;
-      font-size: 13px;
-      letter-spacing: 0.5px;
-      color: #aaa;
-      font-weight: 400; }
-
-/* line 76, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-.Button {
-  display: block;
-  width: 100%;
-  height: 50px;
-  padding: 8px;
-  border-radius: 25px;
-  font-size: 18px;
-  line-height: 34px;
-  text-align: center;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  cursor: pointer;
-  border: 1px solid #006fe6; }
-  /* line 91, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-  .Button:hover {
-    background-color: #3395ff; }
-
-/* line 96, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-.ImageCanvas canvas {
-  display: block;
-  margin: 0 auto;
-  border-radius: 3px; }
-
-/* line 102, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-.ImagePicker {
-  overflow-y: scroll;
-  height: calc(100vh - 74px);
-  margin-top: -8px; }
-  /* line 107, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-  .ImagePicker-image {
-    cursor: pointer;
-    padding: 4px 8px; }
-    /* line 111, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-    .ImagePicker-image:last-child {
-      margin-bottom: 0; }
-    /* line 115, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-    .ImagePicker-image img {
-      max-width: 100%;
-      border: 2px solid transparent;
-      border-radius: 3px;
-      transition: 0.5s ease-in-out border; }
-    /* line 122, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-    .ImagePicker-image--selected {
-      position: relative; }
-      /* line 125, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-      .ImagePicker-image--selected img {
-        opacity: 0.8;
-        border: 2px solid #007bff; }
-      /* line 130, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-      .ImagePicker-image--selected .ImagePicker-wrapper:before {
-        display: block;
-        height: 20px;
-        width: 20px;
-        background: #007bff;
-        border-radius: 50%;
-        border: 1px solid #fff;
-        position: absolute;
-        top: -1px;
-        right: -1px;
-        content: "\2713";
-        color: #fff;
-        z-index: 9;
-        font-size: 12px;
-        line-height: 20px;
-        text-align: center; }
-
-/* line 151, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-.Credit {
-  padding-top: 25px;
-  color: #555;
-  font-size: 14px; }
-  /* line 156, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-  .Credit a, .Credit a:visited {
-    color: #555;
-    font-weight: 400; }
-  /* line 161, /Users/goshakkk/Projects/private/pabla/app/styles/application.scss */
-  .Credit a:hover {
-    color: #333; }
-
-
-/*# sourceMappingURL=app.css.map*/
+.Card-header h4,.Main-subtitle{text-transform:uppercase;font-size:13px;letter-spacing:.5px;color:#aaa;font-weight:400}*{box-sizing:border-box;font-family:-apple-system,system,sans-serif}body{background:#eee;margin:0}.Card,.Main{background:#fff}.Container{height:100%;display:flex;justify-content:center}.Sidebar{flex:0 0 220px;margin:0 15px;padding-top:15px}.Main{flex:0 0 530px;padding:15px;border:1px solid #ddd;border-top:none;border-bottom:none}.Main-subtitle{padding:0;margin:10px 0 19px}.Card{border:1px solid #ddd;border-radius:3px;padding:6px 10px;margin-bottom:10px}.Card:last-child{margin-bottom:0}.Card-header{padding:4px;margin-bottom:14px;border-bottom:1px solid #eee}.Card-header h4{margin:0;padding:0}.Button{display:block;width:100%;height:50px;padding:8px;border-radius:25px;font-size:18px;line-height:34px;text-align:center;background-color:#007bff;color:#fff;text-decoration:none;cursor:pointer;border:1px solid #006fe6}.Button:hover{background-color:#3395ff}.ImagePicker-image-wrapper:before,.SizePicker-size-wrapper:before{width:20px;background:#007bff;content:"\2713";color:#fff;z-index:9;text-align:center}.ImageCanvas canvas{display:block;margin:0 auto;border-radius:3px}.ImagePicker{overflow-y:scroll;height:calc(100vh - 74px);margin-top:-8px}.ImagePicker-image{cursor:pointer;padding:4px 8px;position:relative}.ImagePicker-image:last-child{margin-bottom:0}.ImagePicker-image img{max-width:100%;border:2px solid transparent;border-radius:3px;transition:.5s ease-in-out border}.ImagePicker-image-wrapper:before{display:block;height:20px;border-radius:50%;border:1px solid #fff;position:absolute;top:-1px;right:-1px;font-size:12px;line-height:20px;transition:.5s ease-in-out opacity;opacity:0}.ImagePicker-image--selected img{opacity:.8;border:2px solid #007bff}.ImagePicker-image--selected .ImagePicker-image-wrapper:before{opacity:1}.SizePicker{display:flex;justify-content:space-between}.SizePicker-size{height:50px;border:1px solid #eee;border-radius:3px;font-size:10px;line-height:10px;text-align:center;cursor:pointer;transition:.5s ease-in-out border;position:relative}.SizePicker-size--tall{flex:0 0 35px}.SizePicker-size--square{flex:0 0 50px}.SizePicker-size--wide{flex:0 0 90px}.SizePicker-size-wrapper{padding-top:20px}.SizePicker-size-wrapper:before{display:block;height:20px;border-radius:50%;border:1px solid #fff;position:absolute;top:-10px;right:-10px;font-size:12px;line-height:20px;transition:.5s ease-in-out opacity;opacity:0}.SizePicker-size--selected{border-color:#007bff}.SizePicker-size--selected .SizePicker-size-wrapper:before{opacity:1}.Credit{padding-top:25px;color:#555;font-size:14px}.Credit a,.Credit a:visited{color:#555;font-weight:400}.Credit a:hover{color:#333}
