--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -248,3 +248,79 @@ body {
   width: 100%;
   font-size: 16px;
 }
+
+.TextPropsPicker {
+  p {
+    select {
+      margin-left: 10px;
+      font-size: 16px;
+    }
+
+    margin: 6px 0;
+  }
+
+  &-colors {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &-color {
+    flex: 0 0 30px;
+    height: 30px;
+    cursor: pointer;
+  }
+}
+
+.OptionWrapper {
+  border-radius: 5px;
+  border: 1px solid $light-grey-color;
+  position: relative;
+
+  &, &-w, &-w > div {
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
+  }
+
+  &--size-normal &-w:before {
+    height: 20px;
+    width: 20px;
+    top: -10px;
+    right: -10px;
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  &--size-small &-w:before {
+    height: 14px;
+    width: 14px;
+    top: -7px;
+    right: -7px;
+    font-size: 8px;
+    line-height: 14px;
+  }
+
+  &-w {
+    &:before {
+      display: block;
+      background: $blue-color;
+      border-radius: 50%;
+      border: 1px solid #fff;
+      position: absolute;
+      content: "\2713";
+      color: #fff;
+      z-index: 9;
+      text-align: center;
+      transition: 0.5s ease-in-out opacity;
+      opacity: 0;
+    }
+  }
+
+  &--selected {
+    border-color: $blue-color;
+
+    .OptionWrapper-w:before {
+      opacity: 1;
+    }
+  }
+}
