--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -114,6 +114,7 @@ body {
 .ImagePicker {
   overflow-y: scroll;
   height: calc(100vh - 74px - 32px);
+  padding-top: 4px;
 
   &-image {
     cursor: pointer;
@@ -126,41 +127,15 @@ body {
 
     img {
       max-width: 100%;
-      border: 2px solid transparent;
-      border-radius: 3px;
-      transition: 0.5s ease-in-out border;
+      display: block;
+      //border-radius: 3px;
+      opacity: 1;
+      transition: 5s ease-in-out all;
     }
 
-    &-wrapper {
-      &:before {
-        display: block;
-        height: 20px;
-        width: 20px;
-        background: $blue-color;
-        border-radius: 50%;
-        border: 1px solid #fff;
-        position: absolute;
-        top: -1px;
-        right: -1px;
-        content: "\2713";
-        color: #fff;
-        z-index: 9;
-        font-size: 12px;
-        line-height: 20px;
-        text-align: center;
-        transition: 0.5s ease-in-out opacity;
-        opacity: 0;
-      }
-    }
-
-    &--selected {
+    .OptionWrapper--selected {
       img {
         opacity: 0.8;
-        border: 2px solid $blue-color;
-      }
-
-     .ImagePicker-image-wrapper:before {
-       opacity: 1;
       }
     }
   }
@@ -172,14 +147,10 @@ body {
 
   &-size {
     height: 50px;
-    border: 1px solid $light-grey-color;
-    border-radius: 3px;
     font-size: 10px;
     line-height: 10px;
     text-align: center;
     cursor: pointer;
-    transition: 0.5s ease-in-out border;
-    position: relative;
 
     &--tall {
       flex: 0 0 35px;
@@ -193,38 +164,8 @@ body {
       flex: 0 0 90px;
     }
 
-    &-wrapper {
+    .OptionWrapper {
       padding-top: 20px;
-
-      &:before {
-        display: block;
-        height: 20px;
-        width: 20px;
-        background: $blue-color;
-        border-radius: 50%;
-        border: 1px solid #fff;
-        position: absolute;
-        top: -10px;
-        right: -10px;
-        content: "\2713";
-        color: #fff;
-        z-index: 9;
-        font-size: 12px;
-        line-height: 20px;
-        text-align: center;
-        transition: 0.5s ease-in-out opacity;
-        opacity: 0;
-      }
-    }
-
-    &--selected {
-      border-color: $blue-color;
-
-      .SizePicker-size-wrapper {
-        &:before {
-          opacity: 1;
-        }
-      }
     }
   }
 }
@@ -272,14 +213,23 @@ body {
 }
 
 .OptionWrapper {
-  border-radius: 5px;
+  border-radius: 3px;
   border: 1px solid $light-grey-color;
+  transition: 0.5s ease-in-out border;
   position: relative;
 
-  &, &-w, &-w > div {
+  &--border-thin-grey {
+    border: 1px solid $light-grey-color;
+  }
+
+  &--border-thick-transparent {
+    border: 2px solid transparent;
+    border-radius: none;
+  }
+
+  &, &-w, &-w > * {
     width: 100%;
     height: 100%;
-    border-radius: 3px;
   }
 
   &--size-normal &-w:before {
