--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -5,7 +5,7 @@
 
 $blue-color: #007bff;
 $grey-color: #aaa;
-$dark-grey-color: #ddd;
+$dark-grey-color: #ccc;
 $light-grey-color: #eee;
 
 body {
@@ -94,10 +94,12 @@ body {
   }
 }
 
-.ImageCanvas canvas {
-  display: block;
-  margin: 0 auto;
-  border-radius: 3px;
+.ImageCanvas {
+  canvas {
+    display: block;
+    margin: 0 auto;
+    border-radius: 3px;
+  }
 }
 
 .SearchBar {
@@ -301,5 +303,66 @@ body {
     .OptionWrapper-w:before {
       opacity: 1;
     }
+  }
+}
+
+
+
+// http://projects.lukehaas.me/css-loaders/
+.Spinner:before,
+.Spinner:after,
+.Spinner {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.Spinner {
+  color: #666;
+  font-size: 10px;
+  margin: 80px auto;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.Spinner:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.Spinner:after {
+  left: 3.5em;
+}
+.Spinner:before,
+.Spinner:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
   }
 }
